# OtherRedis

./: CMakeLists.txt  README.md
logs/: server
src/: client.cpp  common.h  main.cpp  server.cpp  server.h
tests/: test.cpp
